Change the Landing

--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@radix-ui/react-label": "^2.1.1",
     "@tabler/icons-react": "^3.28.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.18.0",
+    "framer-motion": "^11.18.2",
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "simple-peer": "^9.11.1",
+    "simplex-noise": "^4.0.3",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.6.0"
   },
