--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "jsonwebtoken": "^9.0.2",
+    "livekit-client": "^2.8.1",
+    "livekit-server-sdk": "^2.9.7",
+    "mediasoup-client": "^3.8.1",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
