--- a/package.json
+++ b/package.json
@@ -9,26 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.740.0",
+    "@aws-sdk/s3-request-presigner": "^3.740.0",
     "@radix-ui/react-label": "^2.1.1",
     "@tabler/icons-react": "^3.28.1",
+    "@types/emoji-flags": "^1.3.3",
+    "@types/react-world-flags": "^1.6.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "emoji-flags": "^1.3.0",
     "framer-motion": "^11.18.2",
     "jsonwebtoken": "^9.0.2",
     "livekit-client": "^2.8.1",
     "livekit-server-sdk": "^2.9.7",
-    "mediasoup-client": "^3.8.1",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "simple-peer": "^9.11.1",
+    "react-dropzone": "^14.3.5",
+    "react-select": "^5.10.0",
+    "react-world-flags": "^1.6.0",
+    "recharts": "^2.15.1",
     "simplex-noise": "^4.0.3",
     "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "world-countries": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/jsonwebtoken": "^9.0.7",
+    "@tailwindcss/forms": "^0.5.10",
+    "tailwind-scrollbar": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
